add classifier labels
