# Backend/src/database/models/atlas.ts
@@ -6,6 +6,7 @@ import { Document, model, Schema } from "mongoose";
 export interface IAtlas extends Document {
   name: string;
   previewPictureURL: string;
+  classifierLabels: Array<string>;
   modalities: Array<string>;
   numberOfCells: number;
   species: Array<string>;
@@ -49,12 +50,21 @@ const atlasSchema = new Schema<IAtlas>(
       default: "https://storage.googleapis.com/jst-2021-bucket-static/images_atlas/inrevision.png"
     },
 
+    classifierLabels: [
+      {
+        type: String,
+        required: true,
+      },
+    ],
+
     modalities: [
       {
         type: String,
         required: true,
       },
     ],
+
+    
 
     numberOfCells: {
       type: Number,
