# Backend/swagger/paths/atlases.json
@@ -36,6 +36,13 @@
                   "previewPictureURL": {
                     "type": "string"
                   },
+                  "classifierLabels": {
+                    "type": "array",
+                    "items": {
+                      "type": "string"
+                    }
+                  },
+
                   "modalities": {
                     "type": "array",
                     "items": {
@@ -134,6 +141,12 @@
                     "previewPictureURL": {
                       "type": "string"
                     },
+                    "classifierLabels": {
+                      "type": "array",
+                      "items": {
+                        "type": "string"
+                      }
+                    },
                     "modalities": {
                       "type": "array",
                       "items": {
@@ -197,6 +210,12 @@
                     },
                     "previewPictureURL": {
                       "type": "string"
+                    },
+                    "classifierLabels": {
+                      "type": "array",
+                      "items": {
+                        "type": "string"
+                      }
                     },
                     "modalities": {
                       "type": "array",
